// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReasonFound should load ExplainCollectionInterval component 1`] = `
Array [
  <h2
    class="euiTitle emotion-euiTitle-l"
  >
    Monitoring is currently off
  </h2>,
  <span
    class="emotion-euiTextColor-subdued"
  >
    <div
      class="euiText emotion-euiText-m"
    >
      <p>
        Monitoring provides insight to your hardware performance and load.
      </p>
    </div>
  </span>,
  <hr
    class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge emotion-euiHorizontalRule-half-l"
  />,
  <div
    class="euiText emotion-euiText-m"
  >
    <p>
      We checked the cluster settings and found that 
      <code>
        xpack.monitoring.collection.interval
      </code>
       is set to 
      <code>
        -1
      </code>
      .
    </p>
    <p>
      The collection interval setting needs to be a positive integer (10s is recommended) in order for the collection agents to be active.
    </p>
    <p>
      Would you like us to change it and enable monitoring?
    </p>
  </div>,
  <div
    class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
  />,
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-s-spaceAround-center-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <button
        class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-m-fill-primary"
        data-test-subj="enableCollectionInterval"
        type="button"
      >
        <span
          class="emotion-euiButtonDisplayContent"
        >
          Turn on monitoring
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`ReasonFound should load ExplainExporters component 1`] = `
Array [
  <h2
    class="euiTitle emotion-euiTitle-l"
  >
    You need to make some adjustments
  </h2>,
  <span
    class="emotion-euiTextColor-subdued"
  >
    <div
      class="euiText emotion-euiText-m"
    >
      <p>
        To run monitoring please perform the following steps
      </p>
    </div>
  </span>,
  <hr
    class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge emotion-euiHorizontalRule-half-l"
  />,
  <div
    class="euiText eui-textLeft emotion-euiText-m"
  >
    <p>
      We checked the 
      <code>
        node001foo
      </code>
       settings for 
      <code>
        xpack.monitoring.exporters
      </code>
      , and found the reason: 
      <code>
        myMonitoringClusterExporter1
      </code>
      .
    </p>
    <p>
      Using monitoring exporters to ship the monitoring data to a remote monitoring cluster is highly recommended as it keeps the integrity of the monitoring data safe no matter what the state of the production cluster. However, as this instance of Kibana could not find any monitoring data, there seems to be a problem with the 
      <code>
        xpack.monitoring.exporters
      </code>
       configuration, or the 
      <code>
        xpack.monitoring.elasticsearch
      </code>
       settings in 
      <code>
        kibana.yml
      </code>
      .
    </p>
    <p>
      Check that the intended exporters are enabled for sending statistics to the monitoring cluster, and that the monitoring cluster host matches the 
      <code>
        xpack.monitoring.elasticsearch
      </code>
       setting in 
      <code>
        kibana.yml
      </code>
       to see monitoring data in this instance of Kibana.
    </p>
  </div>,
]
`;

exports[`ReasonFound should load ExplainExportersCloud component 1`] = `
Array [
  <span
    class="emotion-euiTextColor-subdued"
  >
    <div
      class="euiText emotion-euiText-m"
    >
      <p>
        Configure monitoring through 
        <a
          class="euiLink emotion-euiLink-primary"
          href="https://cloud.elastic.co/deployments"
          rel="noopener"
          target="_blank"
        >
          Elasticsearch Service Console
          <span
            class="emotion-euiLink__externalIcon"
            data-euiicon-type="popout"
          >
            External link
          </span>
          <span
            class="emotion-euiScreenReaderOnly-euiLink__screenReaderText"
          >
            (opens in a new tab or window)
          </span>
        </a>
         Go to 
        <a
          class="euiLink emotion-euiLink-primary"
          href="https://cloud.elastic.co/deployments"
          rel="noopener"
          target="_blank"
        >
          Logs and metrics
          <span
            class="emotion-euiLink__externalIcon"
            data-euiicon-type="popout"
          >
            External link
          </span>
          <span
            class="emotion-euiScreenReaderOnly-euiLink__screenReaderText"
          >
            (opens in a new tab or window)
          </span>
        </a>
         section for a deployment to configure monitoring. For more information visit 
        <a
          class="euiLink emotion-euiLink-primary"
          href="https://www.elastic.co/guide/en/cloud/current/ec-enable-logging-and-monitoring.html"
          rel="noopener"
          target="_blank"
        >
          the documentation page.
          <span
            class="emotion-euiLink__externalIcon"
            data-euiicon-type="popout"
          >
            External link
          </span>
          <span
            class="emotion-euiScreenReaderOnly-euiLink__screenReaderText"
          >
            (opens in a new tab or window)
          </span>
        </a>
      </p>
    </div>
  </span>,
  <hr
    class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge emotion-euiHorizontalRule-half-l"
  />,
  <div
    class="euiText eui-textLeft emotion-euiText-m"
  >
    <p>
      In Elastic Cloud, your monitoring data is stored in your dedicated monitoring cluster.
    </p>
  </div>,
]
`;

exports[`ReasonFound should load ExplainPluginEnabled component 1`] = `
Array [
  <h2
    class="euiTitle emotion-euiTitle-l"
  >
    You need to make some adjustments
  </h2>,
  <span
    class="emotion-euiTextColor-subdued"
  >
    <div
      class="euiText emotion-euiText-m"
    >
      <p>
        To run monitoring please perform the following steps
      </p>
    </div>
  </span>,
  <hr
    class="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge emotion-euiHorizontalRule-half-l"
  />,
  <div
    class="euiText emotion-euiText-m"
  >
    <p>
      We checked the node001foo settings and found that 
      <code>
        xpack.monitoring.enabled
      </code>
       is set to 
      <code>
        false
      </code>
       set, which disables monitoring. Removing the 
      <code>
        xpack.monitoring.enabled: false
      </code>
       setting from your configuration will put the default into effect and enable Monitoring.
    </p>
  </div>,
]
`;
